--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-country-region-selector": "^1.4.7",
     "react-datepicker": "^2.12.1",
     "react-dom": "^16.12.0",
+    "react-phone-number-input": "^3.0.17",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
   },
