--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-country-region-selector": "^1.4.7",
     "react-datepicker": "^2.12.1",
     "react-dom": "^16.12.0",
+    "react-ga": "^2.7.0",
     "react-phone-input-2": "^2.11.0",
     "react-router-dom": "^5.1.2",
     "react-router-hash-link": "^1.2.2",
